--- a/README
+++ b/README
@@ -6,3 +6,10 @@ SQL 2008 Express
 Visual Web 2010 Express
 ASP.Net MVC3
 .Net Framework 4.0
+
+
+Lib
+
+SisoDb.dll - www.sisodb.com
+ServiceStack.Text.dll - www.servicestack.net
+vaccine.core.dll - http://ryzam.blogspot.com
